Working on mobile fixes

--- a/src/styles/components/card.css
+++ b/src/styles/components/card.css
@@ -111,6 +111,9 @@
   margin-top: -.5rem;
 }
 
+.authorName {
+  color: var(--title-color);
+}
 
 /** Hover State **/
 .main-card-title:hover,
