--- a/src/styles/layouts/blogPost.css
+++ b/src/styles/layouts/blogPost.css
@@ -1,9 +1,3 @@
-main {
-  width: calc(100% - 2em);
-  max-width: 100%;
-  margin: 0;
-}
-
 .hero-image {
   width: 100%;
 }
@@ -46,4 +40,24 @@ main {
 
 .prose h2 {
   color: var(--title-color);
+}
+
+@media (max-width: 720px) {
+  .title {
+    font-size: 2.25rem;
+  }
+
+  .prose h2 {
+    font-size: 1.75rem;
+    padding-top: 1.5rem;
+  }
+
+  .prose {
+    width: 100%;
+    padding: .25em;
+  }
+
+  .prose p {
+    padding: .5rem 0;
+  }
 }
